--- a/views/user/dashboard.ejs
+++ b/views/user/dashboard.ejs
@@ -161,7 +161,7 @@
 
         // Event Listener for Join Telegram Button
         joinTelegramButton.addEventListener("click", () => {
-            const telegramLink = "https://t.me/+BGoJd3RiUnY5OGQ1"; // Replace with your Telegram Channel link
+            const telegramLink = "https://t.me/cashcampcampion78"; // Replace with your Telegram Channel link
             window.open(telegramLink, "_blank");
 
             // Call backend to give bonus
